--- a/public/style.css
+++ b/public/style.css
@@ -258,6 +258,13 @@ input:not([type="image"]), textarea {
   -moz-box-sizing: content-box;
   box-sizing: content-box;
 }
+/*!
+Pure v1.0.0
+Copyright 2013 Yahoo!
+Licensed under the BSD License.
+https://github.com/yahoo/pure/blob/master/LICENSE.md
+*/
+table{border-collapse:collapse;border-spacing:0;empty-cells:show;border:1px solid #cbcbcb} table caption{color:#000;font:italic 85%/1 arial,sans-serif;padding:1em 0;text-align:center} table td,table th{border-left:1px solid #cbcbcb;border-width:0 0 0 1px;font-size:inherit;margin:0;overflow:visible;padding:.5em 1em}table td:first-child,table th:first-child{border-left-width:0}table thead{background-color:#e0e0e0;color:#000;text-align:left;vertical-align:bottom}table td{background-color:transparent}table-odd td,table tr:nth-child(2n-1) td{background-color:#f2f2f2}.pure-table-bordered td{border-bottom:1px solid #cbcbcb}.pure-table-bordered tbody>tr:last-child>td{border-bottom-width:0}.pure-table-horizontal td,.pure-table-horizontal th{border-width:0 0 1px;border-bottom:1px solid #cbcbcb}.pure-table-horizontal tbody>tr:last-child>td{border-bottom-width:0}
 
 input[type="search"] {
   -webkit-appearance: textfield;
